# stat_log

./: .gitignore  CMakeLists.txt  README.md  arm_toolchain.cmake  requirements.txt
doc/: requirements.txt  stat_control_app.md  statistic_types.md
include/: stat_log.h
include/backends/: shared_mem_backend.h
include/loggers/: logger_common.h
include/parsers/: leaf_parser.h  parent_parser.h  parser_common.h
include/stat_log/: defs.h  fusion_includes.h  stat_log.h
include/stat_log/backends/: shared_mem_backend.h
include/stat_log/loggers/: logger_common.h  shared_memory_logger.h  stream_logger.h
include/stat_log/parsers/: leaf_parser.h  parent_parser.h  parser_common.h
include/stat_log/stats/: accumulator.h  null_stat.h  simple_counter.h  simple_status.h  stat_array.h  stats_common.h
include/stat_log/stats/accumulator_types/: accumulator_common.h  boost_hist.hpp  count.h  histogram.h  max.h  mean.h  min.h
include/stat_log/util/: bit_status.h  command.h  compile_proxy.h  component_commander.h  make_stat_tags.h  printer.h  stat_log_impl.h  tag_commander.h  utils.h
include/stats/: simple_counter.h  stat_table.h  stats_common.h
include/util/: stat_log_impl.h  utils.h
src/: CMakeLists.txt  printer.cpp  shared_mem_backend.cpp  shared_memory_logger.cpp  utils.cpp
test/: CMakeLists.txt  makefile  test.cpp
test/include/: hw_intf_stat_tags.h  mac_stat_tags.h  sis_stat_tags.h
test/test1/: CMakeLists.txt  common.cpp  common.h  generator.cpp  hw_intf.h
test/test_basic/: CMakeLists.txt  common.cpp  common.h  controller.cpp  generator.cpp
test/test_full/: CMakeLists.txt  common.cpp  common.h  controller.cpp  generator.cpp  hw_intf_gen.cpp  mac_gen.cpp  sis_gen.cpp
test/test_multi_gens/: common.cpp  common.h  controller.cpp  generator.cpp  hw_intf.h
test/test_stat_proxy/: CMakeLists.txt  common.cpp  common.h  controller.cpp  generator.cpp  hw_intf_gen.cpp  mac_gen.cpp  sis_gen.cpp  stat_proxy_interface.h
